[package]
name = "my-service-bus-tcp-shared"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-service-bus-shared = { branch = "0.2.3", git = "https://github.com/MyJetTools/my-service-bus-shared.git" }
my-tcp-sockets = { branch = "0.1.6", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
