[package]
name = "my-service-bus-tcp-shared"
version = "0.2.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-service-bus-shared = { tag = "0.2.4", git = "https://github.com/MyJetTools/my-service-bus-shared.git" }
my-tcp-sockets = { tag = "0.1.7", git = "https://github.com/MyJetTools/my-tcp-sockets.git", features = [
    "statefull_serializer",
    "serialize_as_ref",
] }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
